--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,7 @@
     <title>SpringBoot & POI 导出Excel</title>
 </head>
 <body>
-<a href="/excel/download">导出Excel</a>
+<a href="/excel/download">导出Excel</a><br/>
+<a href="/excel/students">从对象列表导出Excel</a>
 </body>
 </html>
