添加上传学生名单Excel文件，解析后返回json的方法;

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,5 +14,11 @@
     选择文件：<input type="file" name="file"/><br>
     <input type="submit" value="提交"/>
 </form>
+
+<h3>解析学生名单</h3>
+<form action="/excel/upload-students" method="post" enctype="multipart/form-data">
+    选择学生名单文件：<input type="file" name="file"/><br>
+    <input type="submit" value="提交" />
+</form>
 </body>
 </html>
