添加创建含对齐方式的xlsx文件方法；

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -31,5 +31,7 @@
     <input type="submit" value="提交" />
 </form>
 <hr>
+<h3>创建含对齐方式的 xlsx</h3>
+<a href="/excel/create-align">创建含对齐方式的Excel文件</a>
 </body>
 </html>
