--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -33,5 +33,9 @@
 <hr>
 <h3>创建含对齐方式的 xlsx</h3>
 <a href="/excel/create-align">创建含对齐方式的Excel文件</a>
+<hr>
+<h3>创建有边框样式的Excel文件</h3>
+<a href="/excel/create-border">创建</a>
+<hr>
 </body>
 </html>
